--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "module": "CommonJS",
+        // "module": "CommonJS",
         "target": "ES6",
         "strict": true,
         "removeComments": true,
